--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebWave</title>
-</head>
-<body>
-    <h1>WebWave</h1>
-    <p>WebWave is a premier web development and digital marketing agency. We create responsive, high-performance websites that enhance your brand's online presence. Our expert team combines creativity and technology to drive conversions and foster business growth. Partner with us for innovative strategies that engage your audience!</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
